--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,32 +2,32 @@ version: "3"
 
 services:
   namenode:
-    image: bde2020/hadoop-namenode:whx
+    image: bde2020/hadoop-namenode:master
     container_name: namenode
     restart: always
     ports:
       - 9870:9870
       - 9000:9000
     volumes:
-      - ./hadoop_namenode:/hadoop/dfs/name
+      - ./data/hadoop_namenode:/hadoop/dfs/name
     environment:
       - CLUSTER_NAME=test
     env_file:
       - ./hadoop.env
 
   datanode:
-    image: bde2020/hadoop-datanode:whx
+    image: bde2020/hadoop-datanode:master
     container_name: datanode
     restart: always
     volumes:
-      - ./hadoop_datanode:/hadoop/dfs/data
+      - ./data/hadoop_datanode:/hadoop/dfs/data
     environment:
       SERVICE_PRECONDITION: "namenode:9870"
     env_file:
       - ./hadoop.env
   
   resourcemanager:
-    image: bde2020/hadoop-resourcemanager:whx
+    image: bde2020/hadoop-resourcemanager:master
     container_name: resourcemanager
     restart: always
     environment:
@@ -36,7 +36,7 @@ services:
       - ./hadoop.env
 
   nodemanager1:
-    image: bde2020/hadoop-nodemanager:whx
+    image: bde2020/hadoop-nodemanager:master
     container_name: nodemanager
     restart: always
     environment:
@@ -45,18 +45,18 @@ services:
       - ./hadoop.env
   
   historyserver:
-    image: bde2020/hadoop-historyserver:whx
+    image: bde2020/hadoop-historyserver:master
     container_name: historyserver
     restart: always
     environment:
       SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
     volumes:
-      - ./hadoop_historyserver:/hadoop/yarn/timeline
+      - ./data/hadoop_historyserver:/hadoop/yarn/timeline
     env_file:
       - ./hadoop.env
   
   tools:
-    image: bde2020/hadoop-base:whx
+    image: bde2020/hadoop-base:master
     container_name: tools
     restart: always
     environment:
